--- a/webapp2/app/component/idea/partial/idea/idea.html
+++ b/webapp2/app/component/idea/partial/idea/idea.html
@@ -31,13 +31,13 @@
 				<div ui-tree class="idea-tree" > <!-- data-drag-enabled="false"  -->
 					<ul ui-tree-nodes="" ng-model="ideas" id="tree-root"  style="padding-left: 0px"  >
 
-						<li ng-repeat="idea in ideas" ui-tree-node style="padding-left: 0px">
+						<li ng-repeat="idea in ideas  track by $index" ui-tree-node style="padding-left: 0px">
 							<!-- <div ui-tree-handle data-nodrag> 
 								{{idea.name}} 
 
 							</div> -->
 							<ul ui-tree-nodes="" ng-model="idea.tree" style="padding-left: 0px">
-								<li ng-repeat="step in idea.tree" ui-tree-node ng-include="'nodes_renderer.html'">
+								<li ng-repeat="step in idea.tree  track by $index" ui-tree-node ng-include="'nodes_renderer.html'">
 								</li>
 							</ul>
 						</li>
