--- a/webapp2/app/common/web_component/sidebar/directive/sidebar/sidebar.less
+++ b/webapp2/app/common/web_component/sidebar/directive/sidebar/sidebar.less
@@ -10,3 +10,47 @@
 
 	background-color: lightgreen;
 }
+
+
+
+.sidebr-idea-field-box {
+	height: 30px;
+	width: 100%;
+	position: relative;
+
+}
+
+.sidebr-idea-field-box span{
+	position: absolute;
+	width: 100%;
+	height: 30px;
+
+}
+
+.sidebr-idea-field-box input {
+	background-color: transparent;
+	border: none;
+	color: indigo;
+
+	width: 100%;
+}
+
+.sidebar-idea-list-item {
+	height: 30px;
+}
+
+.sidebar-idea-list-item i {
+	padding-top: 5px;
+}
+
+.sidebar-idea-edit-btn { display: none; }
+.sidebar-idea-list-item:hover
+.sidebar-idea-edit-btn {
+	display: block;
+}
+
+.sidebar-idea-delete-btn { display: none; }
+.sidebar-idea-list-item:hover
+.sidebar-idea-delete-btn {
+	display: block;
+}
