--- a/webapp2/app/component/idea/partial/idea/idea.html
+++ b/webapp2/app/component/idea/partial/idea/idea.html
@@ -2,13 +2,20 @@
 
 	<script type="text/ng-template" id="nodes_renderer.html">
 		<div ui-tree-handle class="tree-node tree-node-content">
+			
+		<div class="pull-left mr-10">
+			<span class="glyphicon glyphicon-th" ></span>
+		</div>
+
 			<a class="btn btn-success btn-xs" ng-if="step.tree && step.tree.length > 0"  ng-click="toggle(this)"><span
 				class="glyphicon"
 				ng-class="{
 					'glyphicon-chevron-right': collapsed,
 					'glyphicon-chevron-down': !collapsed
 				}"></span></a>
-				{{step.content}}
+				
+				<span ng-bind="step.content" ng-click="doEditStepcontent( $event, step )" data-nodrag style="max-width: 70%;" class="ellipsis">
+				</span>
 				
 				<a class="pull-right btn btn-danger btn-xs idea-tree-step-remove" data-nodrag ng-click="remove(this)"><span
 					class="glyphicon glyphicon-remove"></span></a>
@@ -31,13 +38,13 @@
 				<div ui-tree class="idea-tree" > <!-- data-drag-enabled="false"  -->
 					<ul ui-tree-nodes="" ng-model="ideas" id="tree-root"  style="padding-left: 0px"  >
 
-						<li ng-repeat="idea in ideas " ui-tree-node style="padding-left: 0px">
+						<li ng-repeat="idea in ideas track by $index" ui-tree-node style="padding-left: 0px">
 							<!-- <div ui-tree-handle data-nodrag> 
 								
 
 							</div>  -->
 							<ul ui-tree-nodes="" ng-model="idea.tree" style="padding-left: 0px">
-								<li ng-repeat="step in idea.tree  " ui-tree-node ng-include="'nodes_renderer.html'">
+								<li ng-repeat="step in idea.tree track by $index " ui-tree-node ng-include="'nodes_renderer.html'">
 								</li>
 							</ul>
 						</li>
@@ -54,7 +61,7 @@
 					
 
 						<form class="newstepform" role="form" name="newstepform" novalidate ng-submit=" addStep( newstepform ) ">
-							<input type="text" id="newideacontent" name="newideacontent" ng-model="newIdea.content" autocomplete="false">
+							<input type="text" id="newideacontent" name="newideacontent" ng-model="newIdea.content" autocomplete="false" focus-me="newIdea.getTarget ">
 						</form>
 
 					</div>
