--- a/webapp2/app/component/account/partial/login/login.html
+++ b/webapp2/app/component/account/partial/login/login.html
@@ -6,9 +6,10 @@
 
 
 	<div class="loginform-brand-header">
-		flux-capacitor
-		<!-- <img src="" width="250" alt=""> -->
-		<span class="hidden-sm"> | </span> 
+		
+		<img src="img/gc_logo.png" alt="" width="180px" class="pull-left mr-15">  
+
+		<span class="hidden-sm">  </span> 
 		Login
 	</div>
 
