fixed singup && singin views

--- a/webapp2/app/component/account/partial/login/login.html
+++ b/webapp2/app/component/account/partial/login/login.html
@@ -4,15 +4,17 @@
 		<strong>Oh snap!</strong> Change a few things up and try submitting again.
 	</div>
 
+<div class="row mt30">
+	<div  class="col-sm-offset-4 col-sm-4"><img src="img/gc_logo.png" alt="" width="180px" class="mb-30">	</div>
+</div>
 
-	<div class="loginform-brand-header">
-		
-		<img src="img/gc_logo.png" alt="" width="180px" class="pull-left mr-15">  
+<!---	<div class="loginform-brand-header">
+		  
 
 		<span class="hidden-sm">  </span> 
 		Login
 	</div>
-
+-->
 	<form class="loginform-form" role="form" name="loginform" novalidate ng-submit=" submit( loginform ) ">
 
 		<fieldset>
