--- a/webapp2/app/component/account/partial/signup/signup.html
+++ b/webapp2/app/component/account/partial/signup/signup.html
@@ -1,16 +1,13 @@
-<div class="col-sm-12"  ng-controller="SignupCtrl">
+<div <div class="col-sm-offset-4 col-sm-4" ng-controller="SignupCtrl">
 
 
-	<div class="row">
-		<div class="col-md-6">
+	
+	<div class="row mt30">
+	<div  class="col-sm-offset-4 col-sm-4"><img src="img/gc_logo.png" alt="" width="180px" class="mb-30">	</div>
+</div>
+	
 
-			<div class="account-form-brand-header logo_itca_competencia_2"></div>
-			
-		</div>
-
-		<div class="col-md-4 mt-10">
-
-
+	
 			<div class="loginPage-alert alert alert-danger" role="alert" ng-if="signupFail">
 				<strong>Error en el registro </strong> 
 				<span ng-bind="failMsg"></span>
@@ -42,40 +39,26 @@
 								Recordarme
 							</label>
 
-				<!-- 	<fui-checkbox ng-model="rememberMe"  style="display: inline-block">
-						<span style="margin-left:10px;"> Remember me</span>
-					</fui-checkbox> -->
-				</div>
-			</div>
+						</div>
+					</div>
 
 
-			<hr>
+					<hr>
 
-			<div class="form-group">
-				<div class="pull-right">
-					<button type="submit" class="btn btn-primary"> Finalizar registro </button>
-				</div>
+					<div class="form-group">
+						<div class="pull-right">
+							<button type="submit" class="btn btn-primary"> Finalizar registro </button>
+						</div>
 
-				<a href="#/account/login" class="pull-left">Ya estoy registrado</a>
+						<a href="#/account/login" class="pull-left">Ya estoy registrado</a>
 
-			</div>
+					</div>
 
-		</fieldset>
+				</fieldset>
 
-	</form>
+			</form>
 
-
-
-</div>
-</div>
-
-
-
-
-
-
-
-
+	
 </div>
 
 
